# dynamixel_wrapper

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: buildtest.yml  melodic_buildtest.yml  noetic_buildtest.yml
include/dynamixel_wrapper/: dynamixel_wrapper.h  dynamixel_wrapper_base.h  dynamixel_wrapper_config.h  dynamixel_wrapper_configs.h
include/dynamixel_wrapper/model/: H42_020_S300_R.h  H54_100_S500_R.h  H54_200_S500_R.h  PH42_020_S300_R.h  PH54_100_S500_R.h  PH54_200_S500_R.h  XC330_T181_T.h  XL330.h  XM430_W350_R.h
src/: arm_sequence.cpp  check_inverse.cpp  class_arm.hpp  class_exc_arm.hpp  class_exc_arm_motor.hpp  class_exc_arm_property.hpp  class_exc_arm_simulator.hpp  class_exc_joint.hpp  class_exc_joint_simulator.hpp  class_exc_simulator.hpp  class_joint.hpp  class_pid.hpp  class_quaternion.hpp  class_random.hpp  class_wait.hpp  exc_calculator.cpp  exc_experimenter.cpp  exc_motor.cpp  exc_simulator.cpp  jacobi.cpp  jacobi2.cpp  jacobi3.cpp  liner_interpolation.cpp  motor.cpp  open_manipulator_controller.cpp  orientation.cpp  quasi_orientation.cpp  read_motor_angular.cpp  testtest.cpp
src/ClassTreeExC/: class_tree_exc_arm.hpp  class_tree_exc_arm_base.hpp  class_tree_exc_arm_property.hpp  class_tree_exc_arm_simulator.hpp  class_tree_exc_joint.hpp  class_tree_exc_joint_simulator.hpp  tree_calculator.cpp  tree_simulator.cpp
src/dynamixel_wrapper/: dynamixel_wrapper.cpp
src/examples/: position_control.cpp
